--- a/paper/submission/memo.qmd
+++ b/paper/submission/memo.qmd
@@ -156,15 +156,15 @@ In fact, our proposition here that country-year-level measures should reflect re
 ## Testing Theories of Macrointerest Cross-Nationally {.unnumbered}
 **Comparison to the ESS**.
 R2 asked why we would analyze macrointerest in only the advanced democracies of the OECD when we could simply use the ESS data "and save ourselves all the harmonization effort?"
-This point is two-pronged.
+This point is two-pronged, and we thank the reviewer for bringing it up.
 To address its first part, we examine the advanced democracies because that is where the extant theories of macrointerest apply.
 To our knowledge, political scientists have as yet had relatively little to say regarding, for example, explanations for the public's interest in politics in authoritarian countries.
 We now emphasize that we restrict our sample for theoretical reasons at page 7.
 
-The question of the payoff of our estimates is easily answered, even within this sample of relatively data-rich countries.
+The question of the payoff of the effort to generate our estimates is easily answered, even within this sample of relatively data-rich countries.
 Our macrointerest estimates, by drawing on all of the available survey data on political interest, provide _many_ more country-years to work with than the ESS (which is, as R2 implied, the best alternative).
-The ESS includes only 17.3% of the country-year observations that our macrointerest data make available.
-We review this key advantage in Appendix C.
+The ESS includes only 18% of the country-year observations that our macrointerest data make available.
+We review this key advantage at page 10 and in greater depth in Appendix C.
 
 
 **Two-Step Approach**
@@ -172,6 +172,7 @@ R1 raised the question whether the analysis "could be achieved in a single step 
 We were somewhat puzzled by this comment, but we guessed the reviewer was referring to combining the measurement and analysis steps into a single model, as in @Claassen2022.
 We prefer to avoid such an approach, because it assumes that the indicators of macrointerest are missing at random with regard to the independent variables, and therefore that the relationship between macrointerest and these variables is the same in the countries when and where macrointerest is poorly observed as in the country-years where macrointerest is well observed, and this assumption is difficult to justify.
 If the reviewer had a different "single step" approach in mind, we apologize for not figuring it out.
+
 
 **Uncertainty**. 
 In response to R1's suggestion to provide more details about how we incorporated uncertainty in our analysis, we made a specific discussion at page 11. 
